--- a/Web_Scraping_Sofascore.ipynb
+++ b/Web_Scraping_Sofascore.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOif9M05/cbVacDWWreJ+n",
+      "authorship_tag": "ABX9TyMxQugiCQBZpYsYmNMWd0ju",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "headers = {\n",
         "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/128.0.0.0 Safari/537.36\"\n",
         "}\n",
-        "response = requests.get(url, headers=headers) # Changed request to requests\n",
+        "response = requests.get(url, headers=headers)\n",
         "\n",
         "if response.status_code == 200:\n",
         "    data = response.json()\n",
@@ -82,7 +82,7 @@
         "      period = match_stats['period']\n",
         "\n",
         "      for group in match_stats['groups']:\n",
-        "          group_name = group['groupName'] # Removed extra brackets\n",
+        "          group_name = group['groupName']\n",
         "\n",
         "          for item in group ['statisticsItems']:\n",
         "            stat_name = item.get('name')\n",
@@ -104,8 +104,7 @@
         "    df.to_excel(excel_file, index=False)\n",
         "\n",
         "    print(f'Dados exportados para {excel_file}')\n",
-        "\n",
-        "df # Now df is accessible"
+        "\n"
       ],
       "metadata": {
         "colab": {
